trying to fix text spacing on desktop

--- a/main.css
+++ b/main.css
@@ -35,6 +35,9 @@ body {
     font-family: 'Inconsolata', sans-serif;
 }
 
+p {
+    padding: 15px;
+}
 h1 { 
     text-align: left;
     font-size: 3rem;
@@ -166,7 +169,7 @@ hr.style {
   max-width: 540px;
   height: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
